--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="发送"
-            android:id="@+id/button"
+            android:id="@+id/button_send"
             android:layout_above="@+id/tv_acc"
             android:layout_toRightOf="@+id/btn_curve_jiagong"
             android:layout_toEndOf="@+id/btn_curve_jiagong" />
