--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -4,19 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1.0" >
+     >
 
     <RelativeLayout
         android:id="@+id/lay_curve_root"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.71" >
+        android:layout_weight="0.70" >
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8" >
+        android:layout_weight="0.2" >
 
         <Switch
             android:id="@+id/sw_curve_start"
@@ -26,63 +26,52 @@
             android:textOn="开始" />
 
         <Button
-            android:id="@+id/btn_curve_save"
+            android:id="@+id/btn_curve_shiyu"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/sw_curve_start"
-            android:text="保存" />
+            android:text="时域" />
 
         <Button
-            android:id="@+id/btn_curve_jiagong"
+            android:id="@+id/btn_curve_pinyu"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/btn_curve_save"
-            android:text="加工" />
-
-        <TextView
-            android:id="@+id/tv_acc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/btn_curve_save"
-            android:text="TextView" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="输入主机ip"
-            android:id="@+id/editText"
-            android:layout_below="@+id/tv_acc"
-            android:layout_alignLeft="@+id/btn_curve_save"
-            android:layout_alignStart="@+id/btn_curve_save"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="输入端口号"
-            android:id="@+id/editText3"
-            android:layout_below="@+id/editText"
-            android:layout_alignLeft="@+id/editText"
-            android:layout_alignStart="@+id/editText"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_toRightOf="@+id/btn_curve_shiyu"
+            android:text="频域" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="发送"
-            android:id="@+id/button_send"
-            android:layout_above="@+id/tv_acc"
-            android:layout_toRightOf="@+id/btn_curve_jiagong"
-            android:layout_toEndOf="@+id/btn_curve_jiagong" />
-
+            android:text="计算索力"
+            android:id="@+id/button_jisuan"
+            android:layout_toRightOf="@+id/btn_curve_pinyu"
+            android:layout_toEndOf="@+id/btn_curve_pinyu" />
+<EditText
+    android:id="@+id/et_set_freq"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentLeft="true"
+    android:layout_width="100dp"
+    android:text="50"
+    android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_set_freq"
+            android:layout_toRightOf="@+id/et_set_freq"
+            android:layout_alignParentBottom="true"
+            android:text="设置频率"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+        android:id="@+id/btn_save"
+        android:layout_toRightOf="@+id/btn_set_freq"
+        android:layout_alignParentBottom="true"
+        android:text="保存时域数据"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
        </RelativeLayout>
 
 </LinearLayout>
