--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -61,7 +61,7 @@
     android:id="@+id/et_set_freq"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
-    android:layout_width="100dp"
+    android:layout_width="wrap_content"
     android:text="50"
     android:layout_height="wrap_content" />
         <Button
@@ -72,10 +72,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
-        android:id="@+id/btn_save"
+        android:id="@+id/btn_import"
         android:layout_toRightOf="@+id/btn_set_freq"
         android:layout_alignParentBottom="true"
-        android:text="保存时域数据"
+        android:text="导入"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
        </RelativeLayout>
