--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -99,7 +99,14 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:text="导入" />
-
+        <EditText
+            android:id="@+id/et_jieshu_input"
+            android:layout_toLeftOf="@+id/btn_import"
+            android:layout_alignParentBottom="true"
+            android:layout_width="50dp"
+            android:visibility="gone"
+            android:hint="输入阶数"
+            android:layout_height="wrap_content" />
         <Button
             android:id="@+id/button_suoli"
             style="?android:attr/buttonStyleSmall"
