--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -17,13 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@android:color/transparent"
+            android:background="@android:color/white"
             android:gravity="center">
 
             <Button
                 android:id="@+id/btn_curve_shiyu"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
+                android:layout_marginRight="10dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/et_auto_run_time"
@@ -36,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/btn_curve_shiyu"
-                android:text="频谱图" />
+                android:text=" 频谱图 " />
         </LinearLayout>
     </RelativeLayout>
 
@@ -79,7 +80,7 @@
             android:id="@+id/baseFreq"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:text="基频: "
+            android:text="    基频    "
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_height="wrap_content" />
@@ -98,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:text="导入" />
+            android:text="导入时程" />
 
         <Button
             android:id="@+id/button_suoli"
@@ -106,8 +107,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/baseFreqNum"
-            android:text="索力:" />
+            android:layout_centerHorizontal="true"
+            android:text="    索力    " />
         <TextView
             android:id="@+id/suoliNum"
             android:layout_marginBottom="10dp"
