--- a/res/layout/fragment_curve_realtime.xml
+++ b/res/layout/fragment_curve_realtime.xml
@@ -78,6 +78,7 @@
             android:text="50" />
         <Button
             android:id="@+id/baseFreq"
+            android:visibility="gone"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:text="    基频    "
@@ -86,6 +87,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/baseFreqNum"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:text="0.00000"
             android:layout_marginBottom="10dp"
@@ -102,19 +104,20 @@
             android:text="导入时程" />
 
         <Button
-            android:id="@+id/button_suoli"
+            android:id="@+id/button_jisuansuoli"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="    索力    " />
+            android:text="    计算    " />
         <TextView
             android:id="@+id/suoliNum"
+            android:visibility="gone"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:text="       "
-            android:layout_toRightOf="@+id/button_suoli"
+            android:layout_toRightOf="@+id/button_jisuansuoli"
             android:layout_alignParentBottom="true"
             android:layout_height="wrap_content" />
     </RelativeLayout>
